force-app/main/default/objects/Owner_Assignment_Rule__c/Owner_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>Owner Assignment Rule</label>
    <nameField>
        <displayFormat>OWNER-ASSGMNT-RULE-{0000}</displayFormat>
        <label>Owner Assignment Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Owner Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>