force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Assigned_Object__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Object__c</fullName>
    <inlineHelpText>Select the object which will be assigned(owner).</inlineHelpText>
    <label>Assigned Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>