force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Criteria_Field_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Field_Value_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value of criteria such as if Entry Criteria is &quot;Core_Banking_Suggested_Segment__c&quot;, the input value must be &quot;SE&quot;, &quot;BB&quot;, &quot;CB&quot; or &quot;MB&quot;.</inlineHelpText>
    <label>Criteria Field Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>