force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Criteria_Field_Value_3__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Field_Value_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Criteria Field Value 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>