force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default user in case that system can not assign owner by rule criteria.</inlineHelpText>
    <label>Default</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Owner_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>