force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <inlineHelpText>Field of Assigned Object to be assigned such as Owner field.</inlineHelpText>
    <label>Destination Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>