force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Entry_Criteria_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Entry_Criteria_Field_3__c</fullName>
    <label>Entry Criteria Field 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core_Banking_Suggested_Segment__c</fullName>
            </value>
            <value>
                <fullName>Province_Primary_PE__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>