force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Mapped_to_field__c.field-meta.xml
<CustomField>
    <fullName>Mapped_to_field__c</fullName>
    <inlineHelpText>Field of Mapping Table to be mapped with Assigned Object.</inlineHelpText>
    <label>Mapped to field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mapped_to_table__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>TMBCode__c</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Cust_Type_Code__c</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>