force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Mapped_to_table__c.field-meta.xml
<CustomField>
    <fullName>Mapped_to_table__c</fullName>
    <inlineHelpText>Table Mapping</inlineHelpText>
    <label>Mapped to table</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object_field_to_Map__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Branch_and_Zone__c</fullName>
            </value>
            <value>
                <fullName>IndustryMaster__c</fullName>
            </value>
            <value>
                <fullName>Province__c</fullName>
            </value>
            <value>
                <fullName>Cust_Type_Master__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>