force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Object_field_to_Map__c.field-meta.xml
<CustomField>
    <fullName>Object_field_to_Map__c</fullName>
    <inlineHelpText>Field of Assigned Object to be mapped with Mapping Table.</inlineHelpText>
    <label>Object field to Map</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assigned_Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTL_Created_Branch__c</fullName>
            </value>
            <value>
                <fullName>Business_Type_Code__c</fullName>
            </value>
            <value>
                <fullName>Province_Primary_PE__c</fullName>
            </value>
            <value>
                <fullName>Cust_Type_Code__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>