force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Sequent of checking rule condition depends on priority. Less number means Higher priority. 
remark: program run one rule at a time</inlineHelpText>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>