force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <inlineHelpText>Assigned Object&apos;s record type.</inlineHelpText>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assigned_Object__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>