force-app/main/default/objects/Owner_Assignment_Rule__c/fields/Result_field__c.field-meta.xml
<CustomField>
    <fullName>Result_field__c</fullName>
    <inlineHelpText>Result value field from Table Mapping</inlineHelpText>
    <label>Result field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mapped_to_field__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Zone_Code_SE__c</fullName>
            </value>
            <value>
                <fullName>Zone_Code_BB__c</fullName>
            </value>
            <value>
                <fullName>Team_Code__c</fullName>
            </value>
            <value>
                <fullName>Team_Code_CB__c</fullName>
            </value>
            <value>
                <fullName>Region_Group_Code__c</fullName>
            </value>
            <value>
                <fullName>Zone_Code__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>