force-app/main/default/objects/Owner_Assignment_Rule__c/fields/User_mapping_condition__c.field-meta.xml
<CustomField>
    <fullName>User_mapping_condition__c</fullName>
    <inlineHelpText>Field to be condition of mapping user with Result field of Mapping Table .</inlineHelpText>
    <label>User Mapping Condition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>User_mapping_profile__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Zone_Code__c</fullName>
            </value>
            <value>
                <fullName>Region_Code__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>