force-app/main/default/objects/Owner_Assignment_Rule__c/fields/User_mapping_profile__c.field-meta.xml
<CustomField>
    <fullName>User_mapping_profile__c</fullName>
    <inlineHelpText>Profile of user which will be assign to be owner.</inlineHelpText>
    <label>User Mapping Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TMB SE Zone Manager Profile</fullName>
            </value>
            <value>
                <fullName>TMB Team Head Profile</fullName>
            </value>
            <value>
                <fullName>TMB BB Regional Manager Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>