force-app/main/default/objects/Owner_Assignment_Rule__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Active_Flag__c</columns>
    <columns>Assigned_Object__c</columns>
    <columns>Priority__c</columns>
    <columns>Entry_Criteria_Field_1__c</columns>
    <columns>Criteria_Field_Value_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>